syntax = "proto3";

package crm;

import "google/protobuf/timestamp.proto";

message User {
   uint64 id = 1;
   string name = 2;
   string email = 3;
   google.protobuf.Timestamp created_at = 4;
}

message GetUserRequest {
   uint64 id = 1;
}

message CreateUserRequest {
   string name = 1;
   string email = 2;
}

service UserService {
   rpc GetUser (GetUserRequest) returns (User);
   rpc CreateUser (CreateUserRequest) returns (User);
}
